--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,10 @@ services:
 
   jenkins-blueocean:
     # Build the Jenkins image from the Dockerfile in the current directory
-    build: . 
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: sonalirajput/jenkins-gsoc-test:1
     # Restart the container automatically if it fails
     restart: on-failure
     # Specify a name for the container
