--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
     # Restart the container automatically if it fails
     restart: on-failure
     # Specify a name for the container
-    container_name: jenkins-blueocean
+    container_name: jenkins-blueocean1
     # Connect the container to the "jenkins" network
     networks:
       - jenkins
