--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,10 +1,14 @@
 tasks:
-  - init: docker-compose build
-  - command: docker-compose up
+  - init: |
+      docker-compose pull
+  - command: |
+      docker-compose up
+
 
 ports:
-  - name: Jenkins-quickstart
-    port: 8080
+  - port: 2376
+    onOpen: ignore
+  - port: 8080
     onOpen: open-browser
 
 vscode:
