--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,12 +1,20 @@
+# tasks:
+#   - before: docker-compose up -d
+
+# ports:
+#   - port: 2376
+#     onOpen: ignore
+#   - port: 8080
+#     onOpen: open-browser
+
+# vscode:
+#   extensions:
+#     - ms-azuretools.vscode-docker
+
 tasks:
-  - before: docker-compose up -d
-
-ports:
-  - port: 2376
-    onOpen: ignore
-  - port: 8080
-    onOpen: open-browser
-
-vscode:
-  extensions:
-    - ms-azuretools.vscode-docker
+  - init: docker-compose up -d
+ports :
+  - name: Jenkins Instance
+    description: This is a Jenkins instance which is created for learning and exploration purposes
+    port: 8080
+    onOpen: open-preview
