--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,7 +2,10 @@ tasks:
   - init: docker-compose up -d
 
 ports:
-  - name: Jenkins Instance
-    description: This is a Jenkins instance which is created for learning and exploration purposes
+  - name: Jenkins-quickstart
     port: 8080
-    onOpen: open-preview
+    onOpen: open-browser
+    
+vscode:
+  extensions:
+    - ms-azuretools.vscode-docker
